--- a/platziverse-cli/package.json
+++ b/platziverse-cli/package.json
@@ -15,7 +15,8 @@
   },
   "dependencies": {
     "blessed": "^0.1.81",
-    "blessed-contrib": "^4.8.5",
-    "minimist": "^1.2.0"
+    "blessed-contrib": "^4.7.5",
+    "moment": "^2.18.1",
+    "platziverse-agent": "file:../platziverse-agent"
   }
 }
