--- a/platziverse-db/package.json
+++ b/platziverse-db/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "devDependencies": {
     "ava": "^0.24.0",
+    "longjohn": "^0.2.12",
     "nyc": "^11.4.1",
     "proxyquire": "^1.8.0",
     "sinon": "^4.1.3",
@@ -23,6 +24,7 @@
     "debug": "^3.1.0",
     "defaults": "^1.0.3",
     "inquirer": "^4.0.1",
+    "minimist": "^1.2.0",
     "pg": "^7.4.0",
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.28.6"
